--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
       - uses: Swatinem/rust-cache@v2
+      - uses: taiki-e/install-action@nextest
       - run: sudo apt-get update && sudo apt-get install -y mold protobuf-compiler
-      - run: cargo test --workspace
+      - run: cargo nextest run --no-fail-fast --workspace
 
   typos:
     runs-on: ubuntu-latest
