change: remove version parameter from MetaGrpcClient creation
The client version is now obtained directly from the static semver()
function instead of being passed as a parameter. This simplifies the
API and ensures the version is always consistent with the crate version.

Changes:
- Remove `version` parameter from `MetaGrpcClient::try_create()`
- Remove `version` parameter from `MetaGrpcClient::try_create_with_features()`
- Remove `version` field from `RpcClientConf`
- Add `version()` method to `ClientHandle` and `MetaGrpcClient`
- Update `Display` impl to include version in output

Upgrade tip:

When creating a MetaGrpcClient, remove the version argument:

Before:
- `MetaGrpcClient::try_create(endpoints, version, username, password, ...)`
- `MetaGrpcClient::try_create_with_features(endpoints, version, username, ...)`
- `RpcClientConf { version, ... }`

After:
- `MetaGrpcClient::try_create(endpoints, username, password, ...)`
- `MetaGrpcClient::try_create_with_features(endpoints, username, ...)`
- `RpcClientConf { ... }` (no version field)

To access the client version, use the new `version()` method:
- `client.version()` returns `&'static semver::Version`

--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -17,6 +17,7 @@ chrono = { workspace = true }
 databend-base = { workspace = true }
 databend-meta-runtime-api = { workspace = true }
 databend-meta-types = { workspace = true }
+databend-meta-version = { workspace = true }
 derive_more = { workspace = true }
 display-more = { workspace = true }
 fastrace = { workspace = true }
