refactor: centralize version constants in databend-meta-version crate
Move version-related constants and conversion functions from client and
service crates to the centralized databend-meta-version crate. This
eliminates duplication and provides a single source of truth for version
information across the codebase.

Changes:
- Add `MIN_CLIENT_VERSION` and `MIN_SERVER_VERSION` to `databend-meta-version`
- Add `digit_version.rs` with `to_digit_ver()` and `from_digit_ver()` functions
- Add comprehensive unit tests for digit version conversion
- Add `changes.md` documenting version history
- Re-export version constants from client and service crates
- Rename `MIN_METASRV_SEMVER` to `MIN_SERVER_VERSION`
- Rename `MIN_METACLI_SEMVER` to `MIN_CLIENT_VERSION`

Upgrade tip:

If you reference version constants directly, update your imports:

Before:
- `databend_meta_client::MIN_METASRV_SEMVER`
- `databend_meta::version::MIN_METACLI_SEMVER`

After:
- `databend_meta_client::MIN_SERVER_VERSION`
- `databend_meta::version::MIN_CLIENT_VERSION`

The old names are still available as aliases for backward compatibility.

--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -21,6 +21,7 @@ databend-meta-raft-store = { workspace = true }
 databend-meta-runtime-api = { workspace = true }
 databend-meta-sled-store = { workspace = true }
 databend-meta-types = { workspace = true }
+databend-meta-version = { workspace = true }
 deepsize = { workspace = true }
 derive_more = { workspace = true }
 display-more = { workspace = true }
