feat: implement KVApi for ClientHandle and add kvapi integration tests
The `kvapi-test-suite` crate has ~35 KVApi test methods but nothing in
this repo ran them. This adds the missing pieces to make the standalone
repo self-contained for testing the full KVApi contract against a real
metasrv cluster via gRPC.

`KVApi` is implemented directly on `ClientHandle<RT>`, delegating to
existing methods (`upsert_via_txn`, `list`, `request(Streamed(MGetKVReq))`,
`transaction`). The `get_many_kv` impl collects keys from the input
stream until the first error, sends the batch to the server, then chains
the error onto the output — preserving fail-fast semantics while working
within the gRPC batch request model.

`Arc<ClientHandle>` gets `KVApi` for free via the blanket `Deref` impl,
so the test builder returns it directly without a wrapper type.

Changes:
- Add `kvapi::KVApi` impl for `ClientHandle<RT>` in `crates/client/src/kvapi_impl.rs`
- Add `crates/kvapi-tests/` integration test crate with `MetaSrvBuilder`
  implementing `ApiBuilder` for single-node and 3-node cluster tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "crates/client",
     "crates/service",
     "crates/test-harness",
+    "crates/kvapi-tests",
     "crates/version",
 ]
 
@@ -27,6 +28,7 @@ databend-meta = { path = "crates/service" }
 databend-meta-client = { path = "crates/client" }
 databend-meta-kvapi = { path = "crates/kvapi" }
 databend-meta-kvapi-test-suite = { path = "crates/kvapi-test-suite" }
+databend-meta-kvapi-tests = { path = "crates/kvapi-tests" }
 databend-meta-raft-store = { path = "crates/raft-store" }
 databend-meta-runtime-api = { path = "crates/runtime-api" }
 databend-meta-sled-store = { path = "crates/sled-store" }
