--- a/crates/kvapi/Cargo.toml
+++ b/crates/kvapi/Cargo.toml
@@ -19,5 +19,8 @@ log = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 
+[dev-dependencies]
+tokio = { workspace = true }
+
 [lints]
 workspace = true
