feat: add server-side `KvTransaction` gRPC API (client gated by feature flag)
The existing `Transaction` endpoint stores protobuf `TxnRequest` directly in the
raft log, coupling wire format to persistence. Any proto schema change risks
breaking raft log deserialization. The new `KvTransaction` endpoint introduces a
three-layer architecture: protobuf transport types for the wire, Rust-native
serde types (`kv_transaction::Transaction`) for raft log storage, and conversions
between them. This lets the proto schema evolve freely without affecting stored
data.

The new API uses a cleaner branch-based model where each branch has an optional
predicate and a list of operations, evaluated in order. This replaces the legacy
dual execution paths, stringly-typed `execution_path`, and misleading `success`
field of `TxnRequest`.

The server now exposes the `KvTransaction` RPC endpoint, but the client does not
use it by default — `ClientHandle::transaction_v2()` is gated behind the
`transaction-v2` feature flag and only enabled in tests. Production client code
continues to use the old `Transaction` API. The new endpoint will be adopted on
the client side in a future change once the server has been deployed widely
enough.

The applier is rewritten to operate on `kv_transaction::*` types. The old
`Cmd::Transaction(TxnRequest)` path converts to `kv_transaction::Transaction`
internally and delegates to the same code. Both paths return
`AppliedState::KvTxnReply(pb::KvTransactionReply)`.

Changes:
- Add `kv_transaction` module with `Transaction`, `Branch`, `Predicate`,
  `Condition`, `Operation`, `Operand`, `CompareOperator` storage types
- Add `Cmd::KvTransaction(Transaction)` variant
- Replace `AppliedState::TxnReply` with `AppliedState::KvTxnReply`
- Add `KvTransaction` RPC using redirect pattern (not forward), returning
  leader endpoint in gRPC metadata for client-side redirect
- Gate `ClientHandle::transaction_v2()` behind `transaction-v2` feature flag
- Register `Feature::KvTrans

--- a/crates/client/client/Cargo.toml
+++ b/crates/client/client/Cargo.toml
@@ -38,6 +38,9 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
 
+[features]
+transaction-v2 = []
+
 [dev-dependencies]
 anyhow = { workspace = true }
 databend-meta-version = { workspace = true }
