feat: expose `Put.match_seq` on the gRPC wire path
`Put.match_seq` previously only worked internally via `Cmd::KvTransaction`.
The proto `TxnPutRequest` lacked a `match_seq` field, and `convert.rs`
hardcoded `KeyLookup::just(p.key)`, so external clients could not perform
conditional puts. The integration tests also bypassed the wire entirely
via `mn.write()`.

This adds the proto field, wires it through the conversion layer, gates
the client-side `TxnOp::match_seq()` for Put behind the `txn-put-match-seq`
feature flag, registers a version feature, and rewrites the integration
tests to exercise the full gRPC path.

Changes:
- Add `optional uint64 match_seq = 6` to `TxnPutRequest` in proto
- Wire `p.match_seq` through `KeyLookup::new()` in `convert.rs`
- Gate `TxnOp::match_seq()` Put arm behind `txn-put-match-seq` feature
- Register `KvTransactionPutMatchSeq` server feature at `260217.0.0`
- Rewrite 3 `put_match_seq` tests to use `client.transaction_v2()` gRPC path

--- a/crates/client/client/Cargo.toml
+++ b/crates/client/client/Cargo.toml
@@ -40,6 +40,7 @@ tonic = { workspace = true }
 
 [features]
 transaction-v2 = []
+txn-put-match-seq = ["databend-meta-types/txn-put-match-seq", "databend-meta-version/txn-put-match-seq"]
 
 [dev-dependencies]
 anyhow = { workspace = true }
