--- a/crates/server/service/Cargo.toml
+++ b/crates/server/service/Cargo.toml
@@ -51,7 +51,7 @@ tonic-reflection = { workspace = true }
 watcher = { workspace = true }
 
 [dev-dependencies]
-databend-meta-client = { workspace = true, features = ["transaction-v2"] }
+databend-meta-client = { workspace = true, features = ["transaction-v2", "txn-put-match-seq"] }
 databend-meta-test-harness = { workspace = true }
 databend-meta-version = { workspace = true }
 maplit = { workspace = true }
